# oriane

./: .gitignore  README.md
EmbeddingsExtraction/: .env.sample  .gitignore  README.md  create_venv.sh  docker-compose.yml  start_qdrant.sh
EmbeddingsExtraction/qdrant/: deploy-server.sh  remote-setup.sh
EmbeddingsExtraction/src/: ingest_frames_embeds.py  search_playground.py
EmbeddingsExtraction/src/helpers/: searchers.py
EmbeddingsExtraction/src/init/: create_collection.py
ExtractionPipeline-lab/: .gitignore  CHANGELOG.md  Makefile  README.md  architecture.md  code_quality_report.md  main.py  push_api_pipeline.sh  push_api_search.sh  pytest.ini
ExtractionPipeline-lab/api/pipeline/: .env.sample  README.md  audit_boto3_profiles.sh  build-docker.sh  deploy_to_eks.sh  download-model.sh  main.py  run-dev.sh  run-docker.sh  run-tests.sh  run.sh
ExtractionPipeline-lab/api/search/: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  USER_CONTENT_SEARCH.md  VIDEO_PROCESSING.md  deploy_to_eks.sh  install.sh  main.py  requirements.txt  run-dev.sh  run-tests.sh  run.sh  security-scan.sh
ExtractionPipeline-lab/aws/: aws-batch-debug.sh  aws-batch-test.sh  aws-cluster-setup.sh  aws-exec-test.sh  aws-job-test.sh  aws-update-ami.sh  aws-vpc-setup.sh  check_service_quotas.sh  check_specific_quotas.sh  cr.json  create_eks_nodegroups.sh  create_working_nodegroups.sh  diagnose_node_issues.sh  diagnose_nodegroup.sh  eks_analysis_and_solutions.sh  eks_comprehensive_fix.sh  final_eks_fix.sh  fix_and_create_nodegroup.sh  fix_and_recreate_nodegroups.sh  fix_eks_deployment.sh  fix_eks_final.sh  fix_eks_networking.sh  fix_eks_node_registration.sh  fix_eks_nodes_comprehensive.sh  fix_eks_nodes_simple.sh  fix_eks_security_groups.sh  fix_nodegroup_creation.sh  get_eks_roles.sh  install_nvidia_plugin.sh  monitor_eks_deployment.sh  monitor_nodegroups.sh  sample.json  setup_eks_complete.sh  simple_eks_fix.sh  ubnet-0e22e824327172265 \
ExtractionPipeline-lab/core/cpp/: Dockerfile  build.sh  crop_n_frame  crop_n_frame.cpp  push_image.sh
ExtractionPipeline-lab/core/cpp/crop/: CMakeLists.txt  build.sh  link.sh  main.cpp  test.sh
ExtractionPipeline-lab/core/cpp/test/: CMakeLists.txt  main.cpp  test.sh
ExtractionPipeline-lab/qdrant/: README.md
ExtractionPipeline-lab/scripts/: build-and-deploy.sh  check-eks-cluster.sh  cleanup-kind-cluster.sh  cleanup-resources.sh  deploy-to-eks.sh  deploy.sh  deploy_eks_pipeline.sh  deploy_pipeline_app.sh  deploy_pipeline_service.sh  deploy_with_fargate.sh  find_iam_roles.sh  get_eks_roles.sh  investigation_full.sh  migrate_structure.py  profile_api.sh  run-dev.sh  run-tests.sh  setup-env.sh  setup-kind-cluster.sh  setup-project.sh  show_structure.py  test-pipeline.sh  test_api_local.sh  test_docker_simple.sh  test_locally.sh  test_pipeline_kind.sh  validate_structure.py
ExtractionPipeline-lab/terraform/: ecr.tf  iam.tf  main.tf  provider.tf  security.tf  ssm.tf  variables.tf
InstagramTests/lib/: logs.py
OrianeCoreAI-python/lib/: logs.py  utils.py
OrianeExtractionSDK-python/oriane_extraction_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
OrianeVectorDB-qdrant/certs/: oriane-certificate.csr
ViT-model/_git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
ViT_SAM-model/_git/: config  index  packed-refs
VideoCropper-lambda/_git/: config  index
VideoFramesExtractor-lambda/: bun.lockb  package-lock.json
VideoFramesExtractorBulk-lambda/: .env.sample  Dockerfile  Dockerfile.bun  README.md  index.ts  package.json  push_image.sh  test.ts  tsconfig.json
VideoFramesExtractorBulk-lambda/scripts/: count_s3_contents.ts
VideoFramesSceneExtractor-lambda/: .env.sample  .gitignore  Dockerfile  README.md  create_venv.sh  lambda_function.py  lambda_function2.py  push_image.sh  requirements.txt  test.py
VideoFramesSceneExtractor-lambda/tests/: create_venv.sh  insta_downloader.json  insta_downloader.py
_docs/TECH/: DNS.xlsx  ETLs pricing.xlsx  Watchlist seach key words.xlsx
_docs/acquisition/: keywords2.csv
ec2/: connect_to_ec2.sh  connect_to_qdrant.sh
orn-acquisition-lambdas/lib/: deploy.sh  menu.sh  utils.sh
(+505 files in other folders)
